Included more Bayesian models (NNN, NNT, NTN). Cleaned up some UI and improved plotting interactivity. Added possibility to download raw data from plotting divs, added possibility to download raw data from table divs. Made it possible to set own seed for reproducibility. And more blablabla.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,8 +23,8 @@ Imports:
     data.table,
     readxl,
     ggplot2,
-    DT,
     writexl,
+    jsonlite,
     truncnorm,
     purrr,
     htmltools,
