--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(bv_anova_bootstrap_ci)
 export(closeGlassProgress)
 export(create_parameter_row)
 export(create_wizard_nav_buttons)
+export(ensure_stan_models_compiled)
 export(errorGlassProgress)
 export(glassBadge)
 export(glassButton)
@@ -42,7 +43,9 @@ export(mod_data_exploration_flyout_items)
 export(mod_setup_flyout_items)
 export(observeGlassD3Plot)
 export(openGlassProgress)
+export(plot_posterior_density)
 export(plot_subject_specific_CVI)
+export(plot_trace_plots)
 export(prepare_anova_components_d3)
 export(prepare_cvi_vs_concentration_d3)
 export(prepare_cvi_vs_rcv_d3)
@@ -87,9 +90,24 @@ importFrom(DT,dataTableOutput)
 importFrom(DT,datatable)
 importFrom(DT,renderDataTable)
 importFrom(Rcpp,sourceCpp)
+importFrom(data.table,":=")
 importFrom(data.table,as.data.table)
+importFrom(data.table,copy)
 importFrom(data.table,data.table)
 importFrom(data.table,is.data.table)
+importFrom(data.table,rbindlist)
+importFrom(data.table,setkey)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,coord_cartesian)
+importFrom(ggplot2,geom_density)
+importFrom(ggplot2,geom_histogram)
+importFrom(ggplot2,geom_vline)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_x_continuous)
+importFrom(ggplot2,scale_y_continuous)
+importFrom(ggplot2,theme)
+importFrom(ggplot2,theme_classic)
 importFrom(htmltools,HTML)
 importFrom(htmltools,div)
 importFrom(htmltools,h3)
@@ -117,9 +135,13 @@ importFrom(shiny,moduleServer)
 importFrom(shiny,observe)
 importFrom(shiny,observeEvent)
 importFrom(shiny,outputOptions)
+importFrom(shiny,reactive)
+importFrom(shiny,reactiveVal)
 importFrom(shiny,reactiveValues)
 importFrom(shiny,reactiveValuesToList)
 importFrom(shiny,renderPrint)
+importFrom(shiny,renderUI)
+importFrom(shiny,req)
 importFrom(shiny,tagList)
 importFrom(shiny,tags)
 importFrom(shiny,uiOutput)
